Updated aboutus.html with new outreach email

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
 	
 	<p>LAUSD students who are interested will first need to complete an application to help us find the students who are excited about making! Students from underserved schools will be given priority. Students will need a laptop computer in order to join Zoom lectures and access other program materials &#8212; don't hesistate to contact the email below if you need help getting the tools you need to join MakeLA!</p>
 
-	<p>For any questions or concerns, please feel free to contact us at <a class="email" href="mailto:makelaatucla@gmail.com">makelaatucla@gmail.com</a></p> 
+	<p>For any questions or concerns, please feel free to contact us at <a class="email" href="mailto:outreach@make-la.org">outreach@make-la.org</a></p> 
 	</div>
 
 	<div class="socialmedia">
