--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 
 <head>
-<title> MakeLA</title>
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="stylesheet" href="https://use.typekit.net/luy8txw.css">
-<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="myScript.js"></script>
+	<title> MakeLA</title>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" href="https://use.typekit.net/luy8txw.css">
+	<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="myScript.js"></script>
+	
+	<script src="https://getinsights.io/js/insights.js"></script>
+	<script>
+		insights.init('AnaSBa8Ov5gxfdZ8');
+		insights.trackPages();
+	</script>
 </head>
 
 <body>
