--- a/apply.html
+++ b/apply.html
@@ -9,6 +9,12 @@
 	<link rel="stylesheet" href="https://use.typekit.net/luy8txw.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="myScript.js"></script>
+	
+	<script src="https://getinsights.io/js/insights.js"></script>
+	<script>
+		insights.init('AnaSBa8Ov5gxfdZ8');
+		insights.trackPages();
+	</script>
 </head>
 
 <body>
