Added getinsights script to programs.html

--- a/programs.html
+++ b/programs.html
@@ -9,7 +9,12 @@
 	<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="myScript.js"></script>
-
+	
+	<script src="https://getinsights.io/js/insights.js"></script>
+	<script>
+		insights.init('AnaSBa8Ov5gxfdZ8');
+		insights.trackPages();
+	</script>
 </head>
 
 <body>
