--- a/aboutus.html
+++ b/aboutus.html
@@ -42,9 +42,9 @@
 
 	<div class="socialmedia">
 		<p>Keep in touch with us!</p>
-		<button onclick="location.href='https://facebook.com'" class="button button2">facebook</button>
+		<button onclick="location.href='https://facebook.com/uclamakela'" class="button button2">facebook</button>
 
-		<button onclick="location.href='https://instagram.com'" class="button button2">instagram</button>
+		<button onclick="location.href='https://instagram.com/makela.ucla'" class="button button2">instagram</button>
 	</div>
 
 	<div class="footer">
