--- a/apply.html
+++ b/apply.html
@@ -36,21 +36,21 @@
 		<div class="row">
   			<div class="column">
 			<h1> For UCLA students </h1>
-			<p> Check back in January 2021 for applications!</p>
-			<button onclick=" window.open('https://forms.gle/YY29ajSCApPCAzfG6','_blank')" class="button button2 button3">signup for email notifications<br>(UCLA)</button>
-			</div>
+			<p> Applications due January 29, 2021 at 11:59 PM!</p>
+			<button onclick=" window.open('https://forms.gle/bum4fDtCkqgFQ6jZ6','_blank')" class="button button2 button3">winter 2021 member application<br>(UCLA)</button>
+			</div> 
   			<div class="column">
 			<h1> For LAUSD students </h1>
 			<p> Applications are currently closed. </p>
-			<button onclick=" window.open('https://forms.gle/VjX8zwoLpXA4NaNSA','_blank')" class="button button2 button3">signup for email notifications<br>(LAUSD)</button>
+			<button onclick=" window.open('https://forms.gle/VjX8zwoLpXA4NaNSA','_blank')" class="button button2 button3">sign up for email notifications<br>(LAUSD)</button>
 			</div>
 		</div>
 	</div>
 	<div class="socialmedia">
 	<p>Keep in touch with us!</p>
-	<button onclick="location.href='https://facebook.com'" class="button button2">facebook</button>
+	<button onclick="location.href='https://facebook.com/uclamakela'" class="button button2">facebook</button>
 
-	<button onclick="location.href='https://instagram.com'" class="button button2">instagram</button>
+	<button onclick="location.href='https://instagram.com/makela.ucla'" class="button button2">instagram</button>
 	</div>
 
 	<div class="footer">
