--- a/apply.html
+++ b/apply.html
@@ -28,7 +28,7 @@
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
 	<h1> Applications</h1>
-	<p>Thank you for your interest in MakeLA! We are looking forward to getting to know you! Applications will be posted here once they become available.</p>
+	<p>Thank you for your interest in MakeLA! Applications will be posted here when they become available.</p>
 	</div>
 	
 
