--- a/apply.html
+++ b/apply.html
@@ -36,13 +36,13 @@
 		<div class="row">
   			<div class="column">
 			<h1> For UCLA students </h1>
-			<p> Applications due January 29, 2021 at 11:59 PM!</p>
+			<p> Applications due January 29, 2021 at 11:59 PM PST!</p>
 			<button onclick=" window.open('https://forms.gle/bum4fDtCkqgFQ6jZ6','_blank')" class="button button2 button3">winter 2021 member application<br>(UCLA)</button>
 			</div> 
   			<div class="column">
 			<h1> For LAUSD students </h1>
-			<p> Applications are currently closed. </p>
-			<button onclick=" window.open('https://forms.gle/VjX8zwoLpXA4NaNSA','_blank')" class="button button2 button3">sign up for email notifications<br>(LAUSD)</button>
+			<p> Applications due February 19, 2021 at 11:59 PM PST! </p>
+			<button onclick=" window.open('https://forms.gle/CoczujJn9K4qxaSV8','_blank')" class="button button2 button3">sign up for email notifications<br>(LAUSD)</button>
 			</div>
 		</div>
 	</div>
