--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title> MakeLA</title>
+	<link rel="shortcut icon" type=image/jpg" href="icon.jpg"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" href="https://use.typekit.net/luy8txw.css">
 	<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
@@ -22,6 +23,7 @@
 		  <a href="index.html" class="active">HOME</a>
 		  <a href="aboutus.html">ABOUT US</a>
 		  <a href="programs.html">PROGRAMS</a>
+		  <a href="team.html">TEAM</a>
 		  <a href="apply.html">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
