Added favicon, team page

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title> About Us | MakeLA</title>
+	<link rel="shortcut icon" type=image/jpg" href="icon.jpg"/>
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
@@ -24,6 +25,7 @@
 		  <a href="index.html">HOME</a>
 		  <a href="aboutus.html" class="active">ABOUT US</a>
 		  <a href="programs.html">PROGRAMS</a>
+		  <a href="team.html">TEAM</a>
 		  <a href="apply.html">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
