Added favicon, team page

--- a/apply.html
+++ b/apply.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title> Apply | MakeLA</title>
+	<link rel="shortcut icon" type=image/jpg" href="icon.jpg"/>
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" href="https://use.typekit.net/rau0rdn.css">
@@ -23,7 +24,8 @@
 		<div class="topnav" id="myTopnav">
 		  <a href="index.html">HOME</a>
 		  <a href="aboutus.html">ABOUT US</a>
-		  <a href="programs.html">PROGRAMS</a>
+		  <a href="programs.html">GUIDES</a>
+		  <a href="team.html">TEAM</a>
 		  <a href="apply.html" class="active">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
