--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="topnav" id="myTopnav">
 		  <a href="index.html" class="active">HOME</a>
 		  <a href="aboutus.html">ABOUT US</a>
-		  <a href="programs.html">PROGRAMS</a>
+		  <a href="programs.html">GUIDES</a>
 		  <a href="team.html">TEAM</a>
 		  <a href="apply.html">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
