--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
 		<div class="topnav" id="myTopnav">
 		  <a href="index.html">HOME</a>
 		  <a href="aboutus.html" class="active">ABOUT US</a>
-		  <a href="programs.html">PROGRAMS</a>
+		  <a href="programs.html">GUIDES</a>
 		  <a href="team.html">TEAM</a>
 		  <a href="apply.html">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
