Updated name to guides, added favicon/team page
Changed Reslife makerspace -> makerspace

--- a/programs.html
+++ b/programs.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Programs | MakeLA</title>
+	<link rel="shortcut icon" type=image/jpg" href="icon.jpg"/>
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" href="https://use.typekit.net/luy8txw.css">
@@ -24,17 +25,18 @@
 		<div class="topnav" id="myTopnav">
 		  <a href="index.html">HOME</a>
 		  <a href="aboutus.html">ABOUT US</a>
-		  <a href="programs.html" class="active">PROGRAMS</a>
+		  <a href="programs.html" class="active">GUIDES</a>
+		  <a href="team.html" >TEAM</a>
 		  <a href="apply.html">APPLY</a>
 		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</div>
 
-		<h1>Our programs</h1>
-		<p>Live sessions, pre-recorded videos, and other guides will be available here in Spring 2021.</p>
+		<h1>Lecture Guides</h1>
+		<p>Live session links, pre-recorded videos, and lecture guides will be available here in Spring 2021.</p>
 	</div>
 
 	<div class="content2">
-	<p> UCLA student mentor training begins Winter 2021 which will prepare mentors to offer one-one-one help to make our student's projects a success! Tools available for use at the UCLA ResLife MakerSpace include: laser cutters, 3D printers, sewing machines, vinyl cutting, and more. Because the pilot program will be virtual, lectures will be software-focused, with supplemental pre-recorded videos that focus on how to use the Makerspace tools.</p>
+	<p> UCLA student mentor training begins Winter 2021 which will prepare mentors to offer one-one-one help to make our student's projects a success! Tools available for use at the MakerSpace include: laser cutters, 3D printers, sewing machines, vinyl cutting, and more. Because the pilot program will be virtual, lectures will be software-focused, with supplemental pre-recorded videos that focus on how to use the Makerspace tools.</p>
 	</div>
 
 	<div class="footer">
