--- a/apply.html
+++ b/apply.html
@@ -44,7 +44,7 @@
   			<div class="column">
 			<h1> For LAUSD students </h1>
 			<p> Applications due February 19, 2021 at 11:59 PM PST! </p>
-			<button onclick=" window.open('https://forms.gle/CoczujJn9K4qxaSV8','_blank')" class="button button2 button3">sign up for email notifications<br>(LAUSD)</button>
+			<button onclick=" window.open('https://forms.gle/CoczujJn9K4qxaSV8','_blank')" class="button button2 button3">spring 2021 student application<br>(LAUSD)</button>
 			</div>
 		</div>
 	</div>
