changed title name to guides

--- a/programs.html
+++ b/programs.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Programs | MakeLA</title>
+	<title>Guides | MakeLA</title>
 	<link rel="shortcut icon" type=image/jpg" href="icon.jpg"/>
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
