--- a/team.html
+++ b/team.html
@@ -36,7 +36,8 @@
 			<h2> Ethan McCarthy </h2>
 			<h3> Ethan (he/him) is a 3rd year undergraduate Microbiology, Immunology, and Molecular Genetics major and Biomedical Research minor. </h3> 
 			<p> He founded MakeLA because he wanted to introduce others to the maker community and provide students with the opportunity to explore really cool tools! When he is not busy leading a team of passionate and creative UCLA students, he is running, hiking, cooking, or of course, working on DIY projects.</p>
-
+			<p2> contact: admin@make-la.org </p2>
+									       
 			</div>
   			<div class="column">
 			<h1> Vice President </h1>
@@ -44,6 +45,7 @@
 			<h2> Neev Levy </h2>
 			<h3> Neev (he/him) is a 2nd year undergraduate Computer Science major. </h3> 
 			<p> He joined MakeLA to connect with high school students across LA and provide the opportunity to learn, design, and build in the Makerspace. When he is not managing club operations, he enjoys basketball (big Lakers fan), watching movies, and drawing</p>
+			<p2> contact: admin@make-la.org </p2>
 			</div>
 		</div>
 
@@ -56,7 +58,7 @@
 			<h2> Parth Deshpande </h2>
 			<h3> Parth (he/him) is a 3rd year undergraduate Computer Science major. </h3> 
 			<p>  He joined MakeLA to help high school students beyond school work and explore fun activities that will improve their practical knowledge and improve creativity. When he is not creating guides for the MakeLA curriculum, he enjoys sports, watching YouTube, and chilling with friends.</p>
-
+			<p2> contact: education @make-la.org </p2>
 			</div>
   			<div class="column">
 			<h1> Education </h1>
@@ -64,6 +66,7 @@
 			<h2> Andre Gaudreau </h2>
 			<h3> Andre (he/him) is a 2nd year undergraduate Mechanical Engineering major. </h3> 
 			<p> He joined MakeLA to introduce local high schoolers to valuable STEM skills and provide insight on the vast possibilities of current Makerspace technology. When he is not busy creating Makerspace projects, he is playing basketball, watching sports, or doing outdoor activities.</p>
+			<p2> contact: education@make-la.org </p2>
 			</div>
 		</div>
 
@@ -74,7 +77,7 @@
 			<h2> Phoebe Green </h2>
 			<h3> Phoebe (she/her) is a 3rd year undergraduate Economics major. </h3> 
 			<p>  She is passionate about accessibility and education, and MakeLA provides both a creative outlet for students and valuable STEM mentorship. When she is not recruiting members and designing graphics, she enjoys film photography, making jewelry, diving, writing, and music. </p>
-
+			<p2> contact: outreach@make-la.org </p2>
 			</div>
   			<div class="column">
 			<h1> Outreach </h1>
@@ -82,6 +85,7 @@
 			<h2> Nicole Lin </h2>
 			<h3> Nicole (she/her) is a 3rd year undergraduate Bioengineering major and Spanish minor.</h3> 
 			<p> She is passionate about the integration of art/design in STEM, so MakeLA was the perfect opportunity to foster creativity in interested high school students. When she is not busy managing the MakeLA website, she is learning languages, baking, or playing the bass/piano. </p>
+			<p2> contact: outreach@make-la.org </p2>
 			</div>
 		</div>
 
@@ -92,7 +96,7 @@
 			<h2> Bhavna Sreekumar </h2>
 			<h3> Bhavna (she/her) is a 3rd year undergraduate Cognitive Science major and Music Industry minor. </h3> 
 			<p>  She joined MakeLA to work with LAUSD students for an incredible opportunity that mixes all of her interests - design, innovation, and mentorship. When she is not increasing awareness of MakeLA and updating social media, she is a musician (singing, producing, guitar/ukelele) and enjoys watching films, swimming, and traveling. </p>
-
+			<p2> contact: outreach@make-la.org </p2>
 			</div>
   			<div class="column">
 			<h1> Logistics </h1>
@@ -100,6 +104,7 @@
 			<h2> Hope Shin </h2>
 			<h3> Hope is a 4th year Communications major with a Computing specialization. </h3> 
 			<p> She loves designing projects at the Makerspace and is excited to make these tools more accessible to high school students. When she is not busy coordinating MakeLA logistics and contacting LAUSD, she enjoys digital drawing, trying new recipes, drinking boba tea, and reading. </p>
+			<p2> contact: logistics@make-la.org </p2>
 			</div>
 		</div>
 
