--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
 			<h1> President </h1>
 			<img src="ethan.jpg" style="width:260px; height:260px;">
 			<h2> Ethan McCarthy </h2>
-			<h3> Ethan (he/him) is a 3rd year undergraduate Microbiology, Immunology, and Molecular Genetics major and Biomedical Research minor. </h3> 
+			<h3> Ethan (he/him) is a 3rd year undergraduate MIMG major and Biomedical Research minor. </h3> 
 			<p> He founded MakeLA because he wanted to introduce others to the maker community and provide students with the opportunity to explore really cool tools! When he is not busy leading a team of passionate and creative UCLA students, he is running, hiking, cooking, or of course, working on DIY projects.</p>
 			<p2> contact: admin@make-la.org </p2>
 									       
