Updated Hope's bio

--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
 			<img src="hope.jpg" style="width: 260px; height: 260px;">	
 			<h2> Hope Shin </h2>
 			<h3> Hope is a 4th year Communications major with a Computing specialization. </h3> 
-			<p> She loves designing projects at the Makerspace and is excited to make these tools more accessible to high school students. When she is not busy coordinating MakeLA logistics and contacting LAUSD, she enjoys digital drawing, trying new recipes, drinking boba tea, and reading. </p>
+			<p> She loves designing projects at the Makerspace and is excited to make these tools more accessible to high school students. When she is not busy coordinating MakeLA logistics and communicating with LAUSD, she enjoys reading, trying new recipes, hiking with friends, and learning to draw </p>
 			<p2> contact: logistics@make-la.org </p2>
 			</div>
 		</div>
