--- a/team.html
+++ b/team.html
@@ -106,7 +106,19 @@
 			<p> She loves designing projects at the Makerspace and is excited to make these tools more accessible to high school students. When she is not busy coordinating MakeLA logistics and communicating with LAUSD, she enjoys reading, trying new recipes, hiking with friends, and learning to draw </p>
 			<p2> contact: logistics@make-la.org </p2>
 			</div>
-		</div>
+	</div>
+	<div class="row">
+  			<div class="column">
+				<h1> Finance </h1>
+				<img src="farabeed.png" style="width:260px; height:260px;">
+				<h2> Farabeed Anan Khan </h2>
+				<h3> Farabeed (he/him) is a 2nd year undergraduate Economics and International Development major. </h3> 
+				<p>  He joined MakeLA as a passionate advocate for equal access to education for everyone. He believes that learning is limitless and knowledge is the most valuable currency. When he is not managing the finances for MakeLA, Farabeed is either spending quality time with his family, at the gym, or on the field. 
+				</p>
+
+			</div>
+  			
+	</div>
 
 
 
