--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<div class="content">
 		<h1>Welcome to makeLA!</h1>
-		<p> We are a student-run organization whose goal is to connect high school students from the Los Angeles Unified School District (LAUSD) with tools available at UCLA for fabrication of creative projects.</p>
+		<p> We are a student-run organization whose goal is to connect high school students from the Los Angeles Unified School District (LAUSD) with MakerSpace tools for fabrication of creative projects.</p>
 			<button onclick="location.href='aboutus.html';" class="button button1">Learn More</button>
 
 	</div>
