--- a/aboutus.html
+++ b/aboutus.html
@@ -44,9 +44,10 @@
 
 	<div class="socialmedia">
 		<p>Keep in touch with us!</p>
-		<button onclick="location.href='https://facebook.com/uclamakela'" class="button button2">facebook</button>
+				
+		<button onclick=" window.open('https://facebook.com/uclamakela','_blank')" class="button button2">facebook</button>
 
-		<button onclick="location.href='https://instagram.com/makela.ucla'" class="button button2">instagram</button>
+		<button onclick=" window.open('https://instagram.com/makela.ucla','_blank')" class="button button2">instagram</button>
 	</div>
 
 	<div class="footer">
