--- a/apply.html
+++ b/apply.html
@@ -51,9 +51,9 @@
 	<div class="socialmedia">
 		<p>Keep in touch with us!</p>
 				
-		<button onclick=" window.open('https://facebook.com/uclamakela','_blank')" class="button button2">facebook</button>
+		<button onclick=" window.open('https://facebook.com/makerspacela','_blank')" class="button button2">facebook</button>
 
-		<button onclick=" window.open('https://instagram.com/makela.ucla','_blank')" class="button button2">instagram</button>
+		<button onclick=" window.open('https://instagram.com/makela.bruins','_blank')" class="button button2">instagram</button>
 	</div>
 
 	<div class="footer">
