updated with Fall 2021 application link

--- a/apply.html
+++ b/apply.html
@@ -38,12 +38,12 @@
 		<div class="row">
   			<div class="column">
 			<h1> For UCLA students </h1>
-			<p> Applications are currently closed.</p>
-			<button onclick=" window.open('https://forms.gle/bum4fDtCkqgFQ6jZ6','_blank')" class="button button2 button3">winter 2021 member application<br>(UCLA)</button>
+			<p> Applications due Sunday, October 10 at 11:59pm! </p>
+			<button onclick=" window.open('https://forms.gle/kSvqi12aeqbnE2936','_blank')" class="button button2 button3">winter 2021 member application<br>(UCLA)</button>
 			</div> 
   			<div class="column">
 			<h1> For LAUSD students </h1>
-			<p> Applications due Sunday, March 28, 2021 at 11:59 PM PST! </p>
+			<p> Applications are currently closed. </p>
 			<button onclick=" window.open('https://forms.gle/CoczujJn9K4qxaSV8','_blank')" class="button button2 button3">spring 2021 student application<br>(LAUSD)</button>
 			</div>
 		</div>
