--- a/apply.html
+++ b/apply.html
@@ -39,7 +39,7 @@
   			<div class="column">
 			<h1> For UCLA students </h1>
 			<p> Applications due Sunday, October 10 at 11:59pm! </p>
-			<button onclick=" window.open('https://forms.gle/kSvqi12aeqbnE2936','_blank')" class="button button2 button3">winter 2021 member application<br>(UCLA)</button>
+			<button onclick=" window.open('https://forms.gle/kSvqi12aeqbnE2936','_blank')" class="button button2 button3">fall 2021 member application<br>(UCLA)</button>
 			</div> 
   			<div class="column">
 			<h1> For LAUSD students </h1>
