--- a/team.html
+++ b/team.html
@@ -53,24 +53,24 @@
 
 		<div class="row">
   			<div class="column">
-			<h1> Education </h1>
-			<img src="parth.jpg" style="width:260px; height:260px;">
-			<h2> Parth Deshpande </h2>
-			<h3> Parth (he/him) is a 4th year undergraduate Computer Science major. </h3> 
-			<p>  He joined MakeLA to help high school students beyond school work and explore fun activities that will improve their practical knowledge and improve creativity. When he is not creating guides for the MakeLA curriculum, he enjoys sports, watching YouTube, and chilling with friends.</p>
-			<p2> contact: education @make-la.org </p2>
+				<h1> Education </h1>
+				<img src="parth.jpg" style="width:260px; height:260px;">
+				<h2> Parth Deshpande </h2>
+				<h3> Parth (he/him) is a 4th year undergraduate Computer Science major. </h3> 
+				<p>  He joined MakeLA to help high school students beyond school work and explore fun activities that will improve their practical knowledge and improve creativity. When he is not creating guides for the MakeLA curriculum, he enjoys sports, watching YouTube, and chilling with friends.</p>
+				<p2> contact: education @make-la.org </p2>
 			</div>
   			<div class="column">
-			<h1> Education </h1>
-			<img src="andre.jpg" style="width: 260px; height: 260px;">	
-			<h2> Andre Gaudreau </h2>
-			<h3> Andre (he/him) is a 3rd year undergraduate Mechanical Engineering major. </h3> 
-			<p> He joined MakeLA to introduce local high schoolers to valuable STEM skills and provide insight on the vast possibilities of current Makerspace technology. When he is not busy creating Makerspace projects, he is playing basketball, watching sports, or doing outdoor activities.</p>
-			<p2> contact: education@make-la.org </p2>
+				<h1> Education </h1>
+				<img src="andre.jpg" style="width: 260px; height: 260px;">	
+				<h2> Andre Gaudreau </h2>
+				<h3> Andre (he/him) is a 3rd year undergraduate Mechanical Engineering major. </h3> 
+				<p> He joined MakeLA to introduce local high schoolers to valuable STEM skills and provide insight on the vast possibilities of current Makerspace technology. When he is not busy creating Makerspace projects, he is playing basketball, watching sports, or doing outdoor activities.</p>
+				<p2> contact: education@make-la.org </p2>
 			</div>
 		</div>
 
-	<div class="row">
+		<div class="row">
   			<div class="column">
 			<h1> Outreach </h1>
 			<img src="nicole.jpg" style="width:260px; height:260px;">
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 
-	<div class="row">
+		<div class="row">
   			<div class="column">
 				<h1> Outreach </h1>
 				<img src="bhavna.jpg" style="width:260px; height:260px;">
@@ -107,9 +107,10 @@
 				</p>
 
 			</div>
-	</div>
+		</div>
+	 </div> <!-- end of directors section --> 
 											  
-	<div class="alumni"> <h1> Directors </h1> </div>
+	<div class="alumni"> <h1> Alumni </h1> </div>
 			<div class="row">
   				<div class="column">
 				<h1> Outreach </h1>
@@ -129,7 +130,7 @@
 			</div>
 		</div>
 			   
-
+	</div> <-- end of alumni section -->
 
 	</div> <!-- end of bio -->
 
