--- a/team.html
+++ b/team.html
@@ -83,7 +83,7 @@
 			<h1> Outreach </h1>
 			<img src="shanley.jpg" style="width: 260px; height: 260px;">	
 			<h2> Shanley Galanto </h2>
-			<h3> Shanley (she/her) is a 3rd year undergraduate Bioengineering major and Spanish minor.</h3> 
+			<h3> Shanley (she/her) is a 4th year undergraduate Aerospace Engineering major.</h3> 
 			<p> She is passionate about cultivating creative exploration in STEM, and MakeLA is an incredible chance to mentor students and foster creative growth through the tools and programs we have access to. When she isn't busy helping with recruitment and connecting mentors to students, she enjoys reading, painting, swimming, watching movies, and baking apple pies. </p>
 			<p2> contact: outreach@make-la.org </p2>
 			</div>
