uploaded LAUSD app from Mr. Zanotti

--- a/apply.html
+++ b/apply.html
@@ -43,8 +43,8 @@
 			</div> 
   			<div class="column">
 			<h1> For LAUSD students </h1>
-			<p> Applications are currently closed. </p>
-			<button onclick=" window.open('https://forms.gle/CoczujJn9K4qxaSV8','_blank')" class="button button2 button3">spring 2021 student application<br>(LAUSD)</button>
+			<p> Applications are open! </p>
+			<button onclick=" window.open('https://docs.google.com/forms/d/e/1FAIpQLSdZEZqG7FgyNvVmyUD36U_YPnDXH7b8TwQNRVS4I0p5z92O6A/viewform?pli=1','_blank')" class="button button2 button3">fall 2021 student application<br>(LAUSD)</button>
 			</div>
 		</div>
 	</div>
